[DDW-1011] prevent news feed from overlapping full screen dialogs

--- a/source/renderer/app/themes/mixins/layers.scss
+++ b/source/renderer/app/themes/mixins/layers.scss
@@ -1,4 +1,5 @@
-$dialog-z-index: 10001;
+$backdrop-z-index: 10000;
+$dialog-z-index: 10000;
 $loader-backdrop-z-index: 5;
 $back-to-top-z-index: 5;
 $sticky-header-z-index: 1;
